<resources>
    <string name="app_name">Noted</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="your_notes">Your notes</string>
    <string name="note_edit">Note edit</string>
    <string name="sort">Sort</string>
    <string name="couldnt_save_note">Could not save note</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note \"%s\" deleted</string>
    <string name="cancel">Cancel</string>
    <string name="content">Description</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_time">Pick a time</string>
    <string name="all">All</string>
    <string name="favourite">Important</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="header">Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="error_day"> </string>

</resources>