<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:id="@+id/layoutOrder"
android:layout_height="wrap_content"
android:elevation="5dp"
android:orientation="horizontal"
android:visibility="visible">

<Space
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="6" />

<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_weight="1"
    android:padding="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioOrderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <RadioButton
                android:id="@+id/radioAscending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/radioDescending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioNoteOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <RadioButton
                android:id="@+id/radioDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <RadioButton
                android:id="@+id/radioColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />
        </RadioGroup>
    </LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>