<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Noted"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.NotesListFragment">

    <LinearLayout
        android:id="@+id/layoutOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioOrderType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <RadioButton
                        android:id="@+id/radioAscending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ascending" />

                    <RadioButton
                        android:id="@+id/radioDescending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descending" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioNoteOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title" />

                    <RadioButton
                        android:id="@+id/radioDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <RadioButton
                        android:id="@+id/radioColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color" />
                </RadioGroup>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="add_note"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>